# he-toolkit

./: .bandit  .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .shellcheckrc  .typos.toml  .whichfile-format  CODEOWNERS  CPPLINT.cfg  QUICK_START.md  Quickstart-guide  README.md  comp.toml  component_builder.py  default.config  default.toml  dev_reqs.txt  hekit  hekit.py  infofile.py  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.py  test.toml
.github/: PULL_REQUEST_TEMPLATE.md
Notes/: AdvancedTopics.tex  CyclotomicsGaloisNotes.tex  GroupsNotes.tex  GroupsPresentation.tex  InauguralHEPresentation.tex  NumberTheoryNotes.tex  NumberTheoryPresentation.tex  Readme.txt  RingsAndFieldsNotes.tex
cmake/: intel-hexl.cmake  palisade.cmake  seal.cmake
deployments/: README.md
deployments/config_psi/psi/: CMakeLists.txt
deployments/config_psi/psi/include/: data_connection.h  data_consumer.h  data_record.h  readConfig.h  read_config.h
deployments/config_psi/psi/src/: configurable_psi.cpp
deployments/config_psi/psi/tests/: CMakeLists.txt  TestLookup.cpp  main.cpp
docker/: Dockerfile.base  Dockerfile.samples  Dockerfile.toolkit  Dockerfile.vscode  README.md  basic-docker-test.sh  check_dependencies.py  check_dependencies.sh  docker_build.py  dockerfiles.toml  install_docker.sh  repo-inventory.txt  runners.sh  setup_and_run_docker.sh  setup_docker.py  vscode.sh  welcome_msg.sh  which-files.txt  which_files.txt
docker-install/: setup_and_run_docker.sh
evalkit/: Dockerfile  env.list
he-samples/: CMakeLists.txt
he-samples/cmake/: gbenchmark.cmake  gflags.cmake  gtest.cmake  helib.cmake  hexl.cmake  palisade.cmake  seal.cmake
he-samples/examples/: CMakeLists.txt
he-samples/examples/logistic-regression/: CMakeLists.txt  README.md
he-samples/examples/logistic-regression/datasets/: CMakeLists.txt  example_kaggle_homecreditdefaultrisk.ipynb  example_synthetic_data.ipynb  generate_data.py  lr_base.py  requirements.txt
he-samples/examples/logistic-regression/include/: data_loader.hpp  logger.hpp  lr_helper.hpp  lrhe.hpp  lrhe_kernel.hpp  omp_utils.h  timer.hpp
he-samples/examples/logistic-regression/kernels/: CMakeLists.txt  lrhe_kernel.cpp  lrhe_kernel.hpp  omp_utils.cpp  omp_utils.h
he-samples/examples/logistic-regression/src/: data_loader.cpp  lr_helper.cpp  lr_test.cpp  lrhe.cpp  main.cpp  timer.cpp
he-samples/examples/psi/: CMakeLists.txt  README.md  psi.cpp
he-samples/examples/psi/datasets/: ancient_egyptian_gods.set  fruits.set
he-samples/examples/psi/src/: psi.cpp
he-samples/examples/secure-query/: CMakeLists.txt  README.md
he-samples/examples/secure-query/datasets/: us_state_capitals.csv
he-samples/examples/secure-query/include/: sq_helper_functions.h  sq_types.h  sqclient.h  sqserver.h  timer.h
he-samples/examples/secure-query/src/: main.cpp  sqclient.cpp  sqserver.cpp
he-samples/micro-kernels/: CMakeLists.txt  main.cpp  micro_util.h
he-samples/micro-kernels/palisade/: palisade_util.h
he-samples/micro-kernels/seal/: seal_bfv_context.cpp  seal_bfv_context.h  seal_micro_BFV.cpp
he-samples/patches/: palisade-hexl.patch
he-samples/sample-kernels/: CMakeLists.txt  README.md  kernel_util.h  main.cpp
he-samples/sample-kernels/kernels/: CMakeLists.txt  omp_utils.h
he-samples/sample-kernels/kernels/palisade/: omp_utils_palisade.cpp  omp_utils_palisade.h  palisade_bfv_kernel_executor.cpp  palisade_bfv_kernel_executor.h  palisade_ckks_kernel_executor.cpp  palisade_ckks_kernel_executor.h  palisade_omp_utils.cpp  palisade_util.h
he-samples/sample-kernels/kernels/seal/: seal_bfv_context.cpp  seal_bfv_context.h  seal_bfv_kernel_executor.cpp  seal_bfv_kernel_executor.h  seal_ckks_context.cpp  seal_ckks_context.h  seal_ckks_kernel_executor.cpp  seal_ckks_kernel_executor.h  seal_omp_utils.cpp  seal_omp_utils.h
he-samples/sample-kernels/palisade/: palisade_bfv_sample.cpp  palisade_ckks_sample.cpp  palisade_util.h
he-samples/sample-kernels/seal/: seal_bfv_sample.cpp  seal_ckks_sample.cpp
he-samples/sample-kernels/test/: CMakeLists.txt  README.md  main.cpp  test_palisade.cpp  test_palisade_bfv_kernel_executor.cpp  test_palisade_ckks_kernel_executor.cpp  test_seal.cpp  test_seal_bfv_kernel_executor.cpp  test_seal_ckks_kernel_executor.cpp  test_util.h
kit/: PLUGINS.md  README.md  archive.py  command_check_deps.py  command_docker_build.py  command_init.py  command_install.py  command_list.py  command_new.py  command_remove.py  component_builder.py  config.py  constants.py  docker_tools.py  hekit.py  infofile.py  spec.py  tab_completion.py  topological.py  tsort.py
micro-kernels/: CMakeLists.txt
notes/: .gitignore  AdvancedTopics.tex  CyclotomicsGaloisNotes.tex  GroupsNotes.tex  GroupsPresentation.tex  InauguralHEPresentation.tex  NumberTheoryNotes.tex  NumberTheoryPresentation.tex  README.md  RingsAndFieldsNotes.tex  RingsAndFieldsPresentation.tex  RingsandFieldsPresentation.tex
plugins/: README.md
recipes/: config-psi.toml  default.toml  examples.toml  kafka-config-psi.toml  pilot-config-psi.toml  sample-kernels.toml  test.toml  toolkit.toml
tests/: common_utils.py  context.py  test_cmd_check_deps.py  test_cmd_docker_build.py  test_cmd_init.py  test_cmd_install.py  test_cmd_list.py  test_cmd_new.py  test_cmd_plugins.py  test_healg.py  (+27 more)
tools/encoder/: CMakeLists.txt  NIBNAF.h  a_params.txt  b_params.txt  balanced.h  coder.h  ctxt_ops.h  dual_poly.h  encoder-source.cpp  encrypt.h  fractional.h  nibnaf.h  npoly.h  params.txt  rns.h  sparse_poly.h
tools/encoder/goldschmidt/: CMakeLists.txt  goldschmidt.cpp  goldschmidt_sparse.cpp  goldschmidt_sparse_npoly.cpp
tools/encoder/old/: coder.h  nibnaf.h
tools/encoder/old/tests/: test_nibnaf.cpp
tools/encoder/tests/: CMakeLists.txt  encoder-source.cpp  test_balanced.cpp  test_balanced_slots.cpp  test_ctxt_ops.cpp  test_dual_poly.cpp  test_encrypt.cpp  test_fractional.cpp  test_nibnaf.cpp  test_nibnaf_balanced_addition.cpp  test_nibnaf_frac.cpp  test_nibnaf_frac_addition.cpp  test_nibnaf_multi.cpp  test_npoly.cpp  test_rns.cpp  test_sparse_poly.cpp
(+236 files in other folders)
