# Copyright (C) 2022 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]

[tool.setuptools.packages]
find = {}

[project]
name = "intel-he-toolkit"
version = "2.0.0"
description = "The Intel Homomorphic Encryption (HE) toolkit is the primordial vehicle for the continuous distribution of the Intel HE technological innovation to users. The toolkit has been designed with usability in mind and to make it easier for users to evaluate and deploy homomorphic encryption technology on the Intel platforms."
readme = "README.md"
license = { file = "LICENSE" }
#authors = [{ name = "TBD", email = "info@TBD.com" }]
keywords = [
    "security-tools", 
    "cyptography", 
    "he-toolkit", 
    "homomorphic-encryption"
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",    
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "toml >= 0.10.2",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["argcomplete", "docker", "pytest", "pytest-mock", "pytest-xdist"]

[project.urls]
Homepage = "https://github.com/intel/he-toolkit"

[project.scripts]
hekit_test = "kit.hekit:main"